infra/global/glitchtip/06-worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glitchtip-worker
  namespace: infrastructure
  labels:
    app: glitchtip-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glitchtip-worker
  template:
    metadata:
      labels:
        app: glitchtip-worker
    spec:
      nodeSelector:
        node-role: infra
      tolerations:
        - key: node-role
          operator: Equal
          value: infra
          effect: NoSchedule
      imagePullSecrets:
        - name: docker-registry-creds
      containers:
        - name: worker
          image: glitchtip/glitchtip:v4.1
          command:
            - celery
            - -A
            - glitchtip
            - worker
            - -l
            - info
            - -B
            - -s
            - /tmp/celerybeat-schedule
            - --pool=prefork
            - --concurrency=2
            - --without-heartbeat
            - --without-gossip
            - --without-mingle
            - --max-tasks-per-child=500
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi
